--- a/hub/ru/cценарии/index.html
+++ b/hub/ru/cценарии/index.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html>
+
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
@@ -108,7 +109,7 @@
         "* больше нет необходимости в создании, настройке и технической поддержке сайтов",
         "* автоматическая локализация хабов и перевод популярных материалов",
         "* информация об авторе и его творениях автоматически предоставляется в оптимизированном для поисковых сервисов виде, что улучшает ранжирование, а значит увеличивает количество посетителей ваших страниц",
-        "* комментирование и продвижение с помощью Titter",
+        "* комментирование и продвижение с помощью Pinger",
         "* всеобъемлющая и анонимная статистика и аналитика позволяющая знать свою аудиторию",
         "* может работать как “одноранговая сеть”",
         "* защита от цензуры и блокировки. Обеспечение доступа к вашим статьям и медиаконтенту даже если цензор пытается его блокировать",
@@ -261,13 +262,15 @@
             i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
                 (i[r].q = i[r].q || []).push(arguments)
             }, i[r].l = 1 * new Date(); a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
         })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
         ga('create', 'UA-80056587-2', 'auto');
         ga('send', 'pageview');
     </script>
 </head>
+
 <body>
     <script type="text/javascript" src="https://wrioos.com/start.js"></script>
 </body>
+
 </html>
