--- a/hub/ru/index.html
+++ b/hub/ru/index.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html>
+
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
@@ -82,7 +83,7 @@
         "Поиск информации требует усилий и времени. К счастью, многие не ограничиваются соцсетями (об их опасностях и недостатках мы поговорим отдельно) и долго и кропотливо ищут и отбирают те источники, что наилучшим образом удовлетворяют их личным интересам. Однако почему бы не делать это автоматически? Stream — система, которая предназначена для этого. Контент сортируется и каталогизируется по вашим персональным критериям и отображается в виде информационных потоков. Количество сайтов постоянно увеличивается, а поток информации давно вышел за рамки наших физических возможностей ее потребления. Людям просто необходима система, которая возьмет на себя задачу персональной автоматической каталогизации бесконечно растущей информационной лавины.",
         "Финансы — еще одна важная сфера для каждого из нас. Краудфандинг и пожертвования уже доказали свою эффективность. С помощью поддержки миллионов людей создано множество всевозможных проектов. Open Copyright и микроплатежи позволят поддерживать любимых авторов, а созданные книги, песни, фильмы, игры и множество других проектов станут основой расцвета независимой культуры без участия корпораций, построенных на копирайте. Но скоро для многих деньги перестанут быть мерилом успеха, уже сегодня валютой будущего становится репутация.",
         "Для развития одноранговых сетей необходимо доверие сторон, а репутация становится важнейшим критерием для совершения сделки. Системы рейтинга площадок вроде eBay уже доказали свою эффективность без необходимости участия госструктур, паспортов и прочих анахронизмов. Глобальная децентрализованная система Web of Trust позволит без опасений совершать сделки с участниками сети которых вы никогда не видели.",
-        "Стоит отметить, что идея web OS вовсе не уникальна, а попытки создания Cloud / Internet OS были и раньше. Однако все они копировали функционал и интерфейс десктопных ОС, что, на наш взгляд, было главной ошибкой. Веб требует иной подход. Сегодня ближайшим по духу проектом можно назвать Chrome OS от Google. Основное отличие WRIO OS в том, что это не просто облачная ОС с набором приложений, выполняющих задачи, свойственные десктопным операционным системам вроде Windows или Mac OS, а своего рода надстройка над интернетом, которая представляет из себя нечто большее, чем просто отдельные сервисы и сайты. Система комбинирует их, создавая мэшап. Например, создав пост, автор может дать возможность комментировать его (Titter, использует Twitter), получать пожертвования (webGold, на базе Ethereum), делиться с друзьями (Share, через различные сервисы и соцсети) и так далее.",
+        "Стоит отметить, что идея web OS вовсе не уникальна, а попытки создания Cloud / Internet OS были и раньше. Однако все они копировали функционал и интерфейс десктопных ОС, что, на наш взгляд, было главной ошибкой. Веб требует иной подход. Сегодня ближайшим по духу проектом можно назвать Chrome OS от Google. Основное отличие WRIO OS в том, что это не просто облачная ОС с набором приложений, выполняющих задачи, свойственные десктопным операционным системам вроде Windows или Mac OS, а своего рода надстройка над интернетом, которая представляет из себя нечто большее, чем просто отдельные сервисы и сайты. Система комбинирует их, создавая мэшап. Например, создав пост, автор может дать возможность комментировать его (Pinger, использует Twitter), получать пожертвования (webGold, на базе Ethereum), делиться с друзьями (Share, через различные сервисы и соцсети) и так далее.",
         "Мэшап представляет собой мост, соединяющий сегодняшний интернет с его новой версией. С помощью приложений, разработанных на базе API сторонних сервисов, вроде платежных платформ, соцсетей и прочих, мы связываем их отдельные привычные нам функции воедино. Пользователи, подключая Gmail, Twitter, Facebook, Wikipedia, YouTube, Dropbox, Steam и так далее, расширяют свою версию WRIO OS до нужного им функционала: почты, общения, просмотра видео, хранения данных, интернет-покупок, игр, образования и многого другого, превращая свой компьютер или смартфон в незаменимого помощника во всех сферах жизни. Направление потока движения информации меняется: вместо посещения отдельных ресурсов, теперь информация движется от сайтов к пользователю и мы с вами станем первыми пользователями эгоцентричного веба.",
         "Все приложения WRIO OS работают как части единой системы в рамках модульного подхода. А для WRIO платформы можно разрабатывать собственные сервисы и продавать их по аналогии с Google Play. Однако наш проект обладает существенным отличием — его код открыт, что дает возможность развернуть собственную независимую ноду. Передача кода в open source лежит дальше обычных причин: мы видим в интернете инструмент, способный объединить людей в саморегулируемое общество и открытое программное обеспечение — его естественная составляющая.",
         "Интернет давно уже стал частью нашей повседневной жизни и чем дальше, тем он все больше будет оказывать влияние на нас. Необходима система, что станет проводником в мир интернета и защитой от угроз в нем. Вопрос не в том, появятся ли они, а в том, кто первый реализует идею на должном уровне. Сегодня над созданием облачных платформ уже работают Google и Mozilla Foundation (Chrome OS и Firefox OS), хотя их задачи существенно отличаются от целей WRIO OS. После создания браузера WRIO OS, устройства лишь с браузером позволяют создавать дешевые и полнофункциональные устройства, которые будет не страшно потерять, ведь все данные будут зашифрованы и храниться распределенно на миллионах компьютеров и по-прежнему будут доступны с нового устройства.",
@@ -493,9 +494,9 @@
         },
         {
         "@type": "Article",
-        "name": "Titter",
+        "name": "Pinger",
         "about": "Описание.",
-        "url": "https://titter.wrioos.com/ru/?'Titter':39,716"
+        "url": "https://pinger.wrioos.com/ru/?'Pinger':39,716"
         },
         {
         "@type": "Article",
@@ -689,13 +690,15 @@
             i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
                 (i[r].q = i[r].q || []).push(arguments)
             }, i[r].l = 1 * new Date(); a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
         })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
         ga('create', 'UA-80056587-2', 'auto');
         ga('send', 'pageview');
     </script>
 </head>
+
 <body>
     <script type="text/javascript" src="https://wrioos.com/start.js"></script>
 </body>
+
 </html>
