--- a/hub/ru/дао/стратегия_развития/index.html
+++ b/hub/ru/дао/стратегия_развития/index.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html>
+
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
@@ -36,7 +37,7 @@
         "articleBody": [
         "Продвижение основано на двух каналах:",
         "1. возможности публиковать посты любым пользователем с указанием автора материала. В качестве вознаграждение за свой труд и помощи привлечения читателей, пользователь получает 25% от всех донатов. Автору высылается приглашение от имени создателя поста либо от одного из благодарных читателей, и в случае принятия автор присоединяется к проекту и получает перечисленные донаты",
-        "2. комментирование с помощью Titter. Каждый раз комментируя пост пользователь может не только пересылать донаты с помощью webGold, но его твит с комментарием, суммой доната и ссылкой на пост будет виден его подписчикам, помогая автору получить новых читателей, а WRIO OS — пользователей",
+        "2. комментирование с помощью Pinger. Каждый раз комментируя пост пользователь может не только пересылать донаты с помощью webGold, но его твит с комментарием, суммой доната и ссылкой на пост будет виден его подписчикам, помогая автору получить новых читателей, а WRIO OS — пользователей",
         "Со временем количество каналов распространения будет расти."
         ]
         }
@@ -58,7 +59,7 @@
         "@type": "Article",
         "name": "",
         "about": "Без описания.",
-        "url": "http://titter.wrioos.com/ru?'Titter':10,29"
+        "url": "http://pinger.wrioos.com/ru?'Pinger':10,29"
         },
         {
         "@type": "Article",
@@ -76,13 +77,15 @@
             i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
                 (i[r].q = i[r].q || []).push(arguments)
             }, i[r].l = 1 * new Date(); a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
         })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
         ga('create', 'UA-80056587-2', 'auto');
         ga('send', 'pageview');
     </script>
 </head>
+
 <body>
     <script type="text/javascript" src="https://wrioos.com/start.js"></script>
 </body>
+
 </html>
