--- a/src/devserver/titter/titteriframe.html
+++ b/src/devserver/titter/titteriframe.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
@@ -7,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Core editor">
     <meta name="author" content="webRunes">
-    <title>Titter iframe</title>
+    <title>Pinger iframe</title>
 
     <link href="https://default.wrioos.com/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://default.wrioos.com/css/webrunes.css" rel="stylesheet">
@@ -16,11 +17,13 @@
 
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 </head>
+
 <body>
-<div id="frame_container"></div>
-<img src="https://default.wrioos.com/img/loading.gif" id="loadingInd"/>
-<script type="text/javascript" src="http://localhost:3033/common.js"></script>
-<script type="text/javascript" src="http://localhost:3033/titter.js"></script>
+    <div id="frame_container"></div>
+    <img src="https://default.wrioos.com/img/loading.gif" id="loadingInd" />
+    <script type="text/javascript" src="http://localhost:3033/common.js"></script>
+    <script type="text/javascript" src="http://localhost:3033/pinger.js"></script>
 
 </body>
+
 </html>
