--- a/hub/collections/financing_and_promotion_strategy/index.html
+++ b/hub/collections/financing_and_promotion_strategy/index.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html>
+
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
@@ -36,7 +37,7 @@
         "articleBody": [
         "Two growth hacking social media channels are used for the promotion:",
         "1. a possibility for any user to publish posts specifying the author of the content. As a reward for their efforts and the assistance in bringing in more readers such users receive 25% of all donations made with respect to such content. The author receives an invitation on behalf of the topic-starter or one of the grateful readers, and if the invitation is accepted the author joins the project and receives the transferred donations",
-        "2. comments through Titter. Every time when leaving a comment a user can make donations using webGold, and his/her tweet with the comment, donated amount and link to the post will be displayed to his/her subscribers. Thus the author can obtain new readers, and WRIO OS — new users",
+        "2. comments through Pinger. Every time when leaving a comment a user can make donations using webGold, and his/her tweet with the comment, donated amount and link to the post will be displayed to his/her subscribers. Thus the author can obtain new readers, and WRIO OS — new users",
         "Eventually the number of distribution channels will grow."
         ]
         }
@@ -64,7 +65,7 @@
         "@type": "Article",
         "name": "",
         "about": "",
-        "url": "https://titter.wrioos.com?'Titter':10,20"
+        "url": "https://pinger.wrioos.com?'Pinger':10,20"
         },
         {
         "@type": "Article",
@@ -82,13 +83,15 @@
             i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
                 (i[r].q = i[r].q || []).push(arguments)
             }, i[r].l = 1 * new Date(); a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
         })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
         ga('create', 'UA-80056587-2', 'auto');
         ga('send', 'pageview');
     </script>
 </head>
+
 <body>
     <script type="text/javascript" src="https://wrioos.com/start.js"></script>
 </body>
+
 </html>
