--- a/hub/ru/дао/дао-стек/index.html
+++ b/hub/ru/дао/дао-стек/index.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html>
+
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
@@ -33,10 +34,10 @@
         {
         "@type": "Article",
         "inLanguage": "Ru",
-        "name": "Titter",
+        "name": "Pinger",
         "about": "Описание.",
-        "image": "https://titter.wrioos.com/img/cover1-200x200.jpg",
-        "url": "https://titter.wrioos.com/ru"
+        "image": "https://pinger.wrioos.com/img/cover1-200x200.jpg",
+        "url": "https://pinger.wrioos.com/ru"
         },
         {
         "@type": "Article",
@@ -81,13 +82,15 @@
             i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
                 (i[r].q = i[r].q || []).push(arguments)
             }, i[r].l = 1 * new Date(); a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
         })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
         ga('create', 'UA-80056587-2', 'auto');
         ga('send', 'pageview');
     </script>
 </head>
+
 <body>
     <script type="text/javascript" src="https://wrioos.com/start.js"></script>
 </body>
+
 </html>
