--- a/src/devserver/titter/index.html
+++ b/src/devserver/titter/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title></title>
 </head>
+
 <body>
-This is development server's emulation of titter service. Used for hosting it's iframes
+  This is development server's emulation of pinger service. Used for hosting it's iframes
 </body>
+
 </html>
