WP URL position fix for the offer

--- a/hub/collections/investments_and_tokens/index.html
+++ b/hub/collections/investments_and_tokens/index.html
@@ -15,7 +15,7 @@
         "@context": "https://schema.org",
         "@type": "Article",
         "inLanguage": "En",
-        "keywords": "WRIO Internet OS, ДАО, инвестиции, токены",
+        "keywords": "WRIO Internet OS, DAO, investments, tokens",
         "name": "Investments and Tokens",
         "about": "Attracting investments through the issue of new tokens is directly related to the factor. The factor is a multiplier, which value is based on reasonably anticipated development perspectives in view of the rating dynamics. The rating is, first of all, a value that reflects the level of popularity and trust, which has a direct impact on how fast new users can be attracted, and correspondingly determines the cost of the DAO’s tokens. Thus, the change of the rating between rounds is the key benchmark for calculating the next round factor.",
         "articleBody": [
@@ -27,20 +27,20 @@
         "name": "Seed",
         "articleBody": [
         "New Tokens: 1,000,000",
-        "Price: 0.001 ☉",
-        "Funds Raised: 1,000 ☉",
-        "Start Date: March 28, 2016 * · End Date: March 28, 2016",
+        "Price: ☉0.001",
+        "Funds Raised: ☉1,000",
+        "Start Date: March 28, 2016* · End Date: March 28, 2016",
         "Status: Sold",
-        "* registration of DAO WRIO Internet OS in Alternative"
+        "* registration of DAO WRIO Internet OS in The Alternative"
         ]
         },
         {
         "@type": "Article",
         "name": "Seed",
         "articleBody": [
-        "New Tokens: 2,000,000 · Total Tokens: 3,000,000 ",
-        "Price: 0.002 ☉ · Factor: ↑ x2",
-        "Funds Raised: 4,000 ☉ · Total Funds Raised: 5,000 ☉",
+        "New Tokens: 2,000,000 · Total Tokens: 3,000,000",
+        "Price: ☉0.002 · Factor: ↑ x2",
+        "Funds Raised: ☉4,000 · Total Funds Raised: ☉5,000",
         "Start Date: April 10, 2016 · End Date: April 10, 2016",
         "Status: Sold"
         ]
@@ -49,9 +49,9 @@
         "@type": "Article",
         "name": "Seed",
         "articleBody": [
-        "New Tokens: 4,000,000 · Total Tokens: 7,000,000 ",
-        "Price: 0.01 ☉ · Factor: ↑ x5",
-        "Funds Raised: 40,000 ☉ · Total Funds Raised: 45,000 ☉",
+        "New Tokens: 4,000,000 · Total Tokens: 7,000,000",
+        "Price: ☉0.01 · Factor: ↑ x5",
+        "Funds Raised: ☉40,000 · Total Funds Raised: ☉45,000",
         "Start Date: April 21, 2016 · End Date: April 21, 2016",
         "Status: Sold"
         ]
@@ -60,9 +60,9 @@
         "@type": "Article",
         "name": "Seed",
         "articleBody": [
-        "New Tokens: 8,000,000 · Total Tokens: 15,000,000 ",
-        "Price: 0.2 ☉ · Factor: ↑ x20",
-        "Funds Raised: 1,600,000 ☉ · Total Funds Raised: 1,645,000 ☉",
+        "New Tokens: 8,000,000 · Total Tokens: 15,000,000",
+        "Price: ☉0.2 · Factor: ↑ x20",
+        "Funds Raised: ☉1,600,000 · Total Funds Raised: ☉1,645,000",
         "Start Date: May 27, 2016 · End Date: May 27, 2016",
         "Status: Sold"
         ]
@@ -71,8 +71,8 @@
         "@type": "Article",
         "name": "Series A",
         "articleBody": [
-        "New Tokens: 16,000,000 · Total Tokens: 31,000,000 ",
-        "Price: 20 ☉ · Factor: ↑ x100",
+        "New Tokens: 16,000,000 · Total Tokens: 31,000,000",
+        "Price: ☉20 · Factor: ↑ x100",
         "Start: Spring 2018",
         "Status: Not Started"
         ]
