Cover upd: one-pager link added

--- a/hub/cover/index.html
+++ b/hub/cover/index.html
@@ -24,14 +24,20 @@
         "text": [
         "The platform for developing a machine-readable web featuring automatic data processing. Automatic data processing will enable tuning up browsing experience based on the needs and interests of each separate user. This will pave the way for a user-centric Web 3.0 with its predictive services and search engines of new generation.",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
-        "Play Intro"
+        "Intro · One-Pager"
         ],
         "mentions": [
         {
         "@type": "Article",
         "name": "",
         "about": "WRIO Internet OS is a platfrom for developing a machine-readable web featuring automatic data processing. Automatic data processing will enable tuning up browsing experience based on the needs and interests of each separate user. This will pave the way for a user-centric Web 3.0 with its predictive services and search engines of new generation.",
-        "url": "https://youtu.be/q7WevBb8JeQ?'Play Intro':5,0,external"
+        "url": "https://youtu.be/q7WevBb8JeQ?'Intro':5,0,external"
+        },
+        {
+        "@type": "Article",
+        "name": "",
+        "about": "Brief description of the project in one image. Contains the list of drawbacks of todays’ web and ways of their correction, which will be implemented in WRIO Internet OS. Also it provides the operational scheme of the project and roadmap of further developments.",
+        "url": "https://webrunes.com/img/one-pager.png?'One-Pager':5,8,external"
         }
         ]
         },
