--- a/hub/index.html
+++ b/hub/index.html
@@ -304,7 +304,7 @@
         "@type": "Article",
         "name": "",
         "about": "Advanced tweets.",
-        "url": "#?'Pinger'113,70"
+        "url": "https://pinger.wrioos.com?'Pinger'113,70"
         },
         {
         "@type": "Article",
