--- a/hub/offer/index.html
+++ b/hub/offer/index.html
@@ -38,35 +38,29 @@
         },
         {
         "@type": "ImageObject",
-        "name": "Crowdsale Registration",
+        "name": "Initial Coin Offering",
         "thumbnail": "https://webgold.wrioos.com/img/cover1-200x200.jpg",
         "contentUrl": "https://webgold.wrioos.com/img/cover1.jpg",
-        "about": "A Special Round · One Time Event",
+        "about": "Coming soon",
         "text": [
-        "Be one of the first 100 registered users that will have an opportunity to take part in a Special Round 48 Hours prior to the start of the Crowdsale. You will receive an email with instructions how to purchase WRG with a +50% bonus and + extra bonuses.",
+        "WRIO Internet OS will be the first of many WRIO OS projects put up for ICO planned for Spring 2018. Tokens will be sold for webGold (WGD) only. The number of sold WGD will equal to the value of WRIO Internet OS tokens offered for sale during the ICO, and will amount to 51% of all tokens.",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
-        "Reasons to participate:",
-        "* sale of webGold and profit-making with the increase in the rate: unlike other Crowdsales, all raised funds will be used to support webGold exchange rate. This ways webGold can always be sold for the book value. The book value is determined by the ratio of the total number of webGold tokens to the amount raised during the Crowdsale",
-        "* free Airdrop. Crowdsale participants have a unique opportunity to take part in a free distribution of newly issued WRG on a pro rata basis (Proof-of-Stake)",
-        "* unlike the overwhelming majority of other Crowdsales/ICOs we already have a minimum viable product",
-        "* the project is free, yet webGold will be required to purchase additional services: boost posts, offers, premium account, donations and so on.",
-        "* participation in special offers from WRIO OS to acquire premium services and purchase Credits at a lowest price",
-        "* soon after Crowdsale its participants will be able to purchase tokens of first DAOs on special terms, including WRIO Internet OS",
+        "Be one of the first 100 registered users that will have an opportunity to take part in a Special Round 48 Hours prior to the start of the Crowdsale. You will receive an email with instructions how to purchase WRG with a +40% bonus and + extra bonuses.",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
-        "Read more in the White Paper"
+        "webGold Crowdsale Registration"
         ],
         "mentions": [
         {
         "@type": "Article",
-        "name": "",
-        "about": "Crowdsale Registration",
-        "url": "https://goo.gl/WGvdiu?'Crowdsale Registration':1,0,external"
+        "name": "webGold",
+        "about": "webGold is a peer-to-peer decentralized cryptocurrency based on Ethereum blockchain technology.",
+        "url": "https://webgold.wrioos.com?'webGold':3,124"
         },
         {
         "@type": "Article",
-        "name": "White Paper",
-        "about": "Full description of the project including sections related to The Alternative libertarian project. If you still have any questions, please write us to info@webrunes.com, or join the official Slack or Telegram channel.",
-        "url": "https://goo.gl/rVcPCV?'White Paper':13,17,external"
+        "name": "Crowdsale Registration",
+        "about": "Be one of the first 100 registered users that will have an opportunity to take part in a Special Round 48 Hours prior to the start of the Crowdsale. You will receive an email with instructions how to purchase WRG with a +40% bonus and + extra bonuses.",
+        "url": "https://docs.google.com/forms/d/e/1FAIpQLSfe5bYJYayC_ZwmWgHjea-gij5-2MohY5TaOwHT4QhVU_iVnQ/viewform?'webGold Crowdsale Registration':7,0,external"
         }
         ]
         }
