--- a/hub/collections/index.html
+++ b/hub/collections/index.html
@@ -38,16 +38,16 @@
           "image": "https://webrunes.com/img/white_paper-200x200.jpg",
           "url": "https://goo.gl/rVcPCV"
           },
+        {
+        "@type": "Article",
+        "name": "Join us!",
+        "about": "We are always looking for people who share our commitments and principles. If you want to assist in the development of the project, please join our Slack community.",
+        "image": "https://webrunes.com/img/slack-200x200.jpg",
+        "url": "https://goo.gl/VpUePk"
+        },
           {
           "@type": "Article",
-          "name": "Official Slack channel",
-          "about": "You are welcome to become a member of the fast growing WRIO Internet OS community, and to take part in further development of the project!",
-          "image": "https://webrunes.com/img/slack-200x200.jpg",
-          "url": "https://goo.gl/VpUePk"
-          },
-          {
-          "@type": "Article",
-          "name": "Official Telegram channel",
+          "name": "Telegram",
           "about": "You are welcome to become a member of the fast growing WRIO Internet OS community, and to take part in further development of the project!",
           "image": "https://webrunes.com/img/telegram-200x200.jpg",
           "url": "https://t.me/webRunes"
