--- a/hub/index.html
+++ b/hub/index.html
@@ -181,7 +181,7 @@
         },
         {
         "@type": "Article",
-        "name": "How it works?",
+        "name": "How it works",
         "articleBody": [
         "WRIO Internet OS is a PaaS and its cloud applications are SaaS, (operating on remote servers). Such services do not need to be installed, configured or updated by the user; resource-hungry operations are performed on the server side, while the client receives the final results. Thus, the applications in their turn act as conventional desktop programs, and it intends to replace desktop OS’s in the near future.",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
