--- a/hub/index.html
+++ b/hub/index.html
@@ -183,7 +183,7 @@
         "@type": "Article",
         "name": "How it works",
         "articleBody": [
-        "WRIO Internet OS is a PaaS and its cloud applications are SaaS, (operating on remote servers). Such services do not need to be installed, configured or updated by the user; resource-hungry operations are performed on the server side, while the client receives the final results. Thus, the applications in their turn act as conventional desktop programs, and it intends to replace desktop OS’s in the near future.",
+        "WRIO Internet OS is a PaaS and its cloud applications are SaaS, operating on remote servers. Such services do not need to be installed, configured or updated by the user; resource-hungry operations are performed on the server side, while the client receives the final results. Thus, the applications in their turn act as conventional desktop programs, and it intends to replace desktop OS’s in the near future.",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
         "The user-centric approach will revolutionize the browsing experience. Currently users are only able to choose a browser and define a set of plugins to be used with it. But with WRIO internet OS user control goes one step higher: hubs authors determine the content, yet the display style and the set of functions is defined by the user. Web 2.0 sites are replaced with user-centric hubs of Web 3.0.",
