Thanks -> Credit, THX -> CRD

--- a/hub/collections/dao-stack/index.html
+++ b/hub/collections/dao-stack/index.html
@@ -43,7 +43,7 @@
         "@type": "Article",
         "inLanguage": "En",
         "name": "Pinger",
-        "about": "Advanced Tweets service. Transforms your tweet into an image thus increasing the limit from 140 to 1024 characters. With its help you’ll be able to comment Core posts and to transfer Thanks coins and webGold currencies.",
+        "about": "Advanced Tweets service. Transforms your tweet into an image thus increasing the limit from 140 to 1024 characters. With its help you’ll be able to comment Core posts and to transfer Credit coins and webGold currencies.",
         "image": "https://pinger.wrioos.com/img/cover1-200x200.jpg",
         "url": "https://pinger.wrioos.com"
         },
