Telegram Group URL fix
https://t.me/webRunesGroup

--- a/hub/collections/index.html
+++ b/hub/collections/index.html
@@ -50,7 +50,7 @@
           "name": "Telegram",
           "about": "You are welcome to become a member of the fast growing WRIO Internet OS community, and to take part in further development of the project!",
           "image": "https://webrunes.com/img/telegram-200x200.jpg",
-          "url": "https://t.me/webRunes"
+          "url": "https://t.me/webRunesGroup"
           },
           {
           "@type": "Article",
