Update Slack url

--- a/hub/collections/index.html
+++ b/hub/collections/index.html
@@ -43,7 +43,7 @@
         "name": "Join us!",
         "about": "We are always looking for people who share our commitments and principles. If you want to assist in the development of the project, please join our Slack community.",
         "image": "https://webrunes.com/img/slack-200x200.jpg",
-        "url": "https://goo.gl/VpUePk"
+        "url": "https://join.slack.com/t/webrunes/shared_invite/enQtMzE3NzU3OTQ1NzUwLWEyYWNkNmMyZGI5MTY4MmVhYWJkMmI4ODJiNTE0NGNiY2E5NzZjMThmNTI4YWVhMDczYzYyMTViZmQzOThlY2M"
         },
           {
           "@type": "Article",
