Bounty Offer upd

--- a/hub/offer/index.html
+++ b/hub/offer/index.html
@@ -18,20 +18,29 @@
         {
         "@type": "ImageObject",
         "name": "Bounty Campaign",
-        "thumbnail": "https://wrioos.com/offer/img/promotion-200x200.jpg",
-        "contentUrl": "https://wrioos.com/offer/img/promotion.jpg",
+        "thumbnail": "https://wrioos.com/offer/img/bounty-200x200.jpg",
+        "contentUrl": "https://wrioos.com/offer/img/bounty.jpg",
         "about": "Promote and get a reward · Join",
         "text": [
-        "Join our Bounty Campaign and help us build the WRIO Internet OS community. Through sharing and promoting WRIO Internet OS on all social media outlets, you will earn webGold for every like, share, repost or comment.",
+        "Join our Bounty Campaign and help us build the WRIO Internet OS community. Through sharing and promoting WRIO Internet OS on all social media outlets, you will earn webGold.",
+        "Total Bounty Campaign token allocation: 12,000,000 WGD · up to $500,000 equivalent*",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
-        "* x10 WGD per activity: like, share/retweet/repost and comment (MIN 25 activity · MAX 250 activity)"
+        "[*] calculated for the initial WGD price",
+        "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
+        "Read more in the White Paper"
         ],
         "mentions": [
         {
         "@type": "Article",
         "name": "",
         "about": "Bounty Campaign",
-        "url": "https://goo.gl/1rFUzQ?'Join':2,27,external"
+        "url": "https://bitcointalk.org/index.php?topic=2897802?'Join':2,27,external"
+        },
+        {
+        "@type": "Article",
+        "name": "White Paper",
+        "about": "Full description of the project including sections related to The Alternative libertarian project. If you still have any questions, please write us to info@webrunes.com, or join the official Slack or Telegram channel.",
+        "url": "https://goo.gl/rVcPCV?'White Paper':8,17,external"
         }
         ]
         },
@@ -44,7 +53,7 @@
         "text": [
         "WRIO Internet OS will be the first of many WRIO OS projects put up for ICO planned for Spring 2018. Tokens will be sold for webGold (WGD) only. The number of sold WGD will equal to the value of WRIO Internet OS tokens offered for sale during the ICO, and will amount to 51% of all tokens.",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
-        "Be one of the first 100 registered users that will have an opportunity to take part in a Special Round 48 Hours prior to the start of the Crowdsale. You will receive an email with instructions how to purchase WGD with a +40% bonus and + extra bonuses.",
+        "Be one of the first 100 registered users that will have an opportunity to take part in a Special Round 48 Hours prior to the start of the Crowdsale. You will receive an email with instructions how to purchase WRG with a +40% bonus and + extra bonuses.",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
         "webGold Crowdsale Registration"
         ],
@@ -58,7 +67,7 @@
         {
         "@type": "Article",
         "name": "Crowdsale Registration",
-        "about": "Be one of the first 100 registered users that will have an opportunity to take part in a Special Round 48 Hours prior to the start of the Crowdsale. You will receive an email with instructions how to purchase WGD with a +40% bonus and + extra bonuses.",
+        "about": "Be one of the first 100 registered users that will have an opportunity to take part in a Special Round 48 Hours prior to the start of the Crowdsale. You will receive an email with instructions how to purchase WRG with a +40% bonus and + extra bonuses.",
         "url": "https://docs.google.com/forms/d/e/1FAIpQLSfe5bYJYayC_ZwmWgHjea-gij5-2MohY5TaOwHT4QhVU_iVnQ/viewform?'webGold Crowdsale Registration':7,0,external"
         }
         ]
