--- a/hub/offer/index.html
+++ b/hub/offer/index.html
@@ -22,7 +22,7 @@
         "contentUrl": "https://wrioos.com/offer/img/bounty.jpg",
         "about": "Promote and get a reward · Join",
         "text": [
-        "Join our Bounty Campaign and help us build the WRIO Internet OS community. Through sharing and promoting WRIO Internet OS on all social media outlets, you will earn webGold.",
+        "Join our Bounty Campaign and help us build the WRIO Internet OS community. Through sharing and promoting WRIO Internet OS on all social media outlets, you will earn webGold (WGD).",
         "Total Bounty Campaign token allocation: 12,000,000 WGD · up to $500,000 equivalent*",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
         "[*] calculated for the initial WGD price",
@@ -34,7 +34,13 @@
         "@type": "Article",
         "name": "",
         "about": "Bounty Campaign",
-        "url": "https://bitcointalk.org/index.php?topic=2897802?'Join':2,27,external"
+        "url": "https://goo.gl/QKFdt1?'Join':2,27,external"
+        },
+        {
+        "@type": "Article",
+        "name": "webGold",
+        "about": "webGold is a peer-to-peer decentralized cryptocurrency based on Ethereum blockchain technology.",
+        "url": "https://webgold.wrioos.com?'webGold':3,165"
         },
         {
         "@type": "Article",
