--- a/hub/index.html
+++ b/hub/index.html
@@ -214,7 +214,7 @@
         },
         {
         "@type": "Article",
-        "name": "Bounty Campaign Thread",
+        "name": "Bounty Campaign",
         "about": "Join our Bitcointalk Bounty Campaign and help us build the WRIO Internet OS community. Through sharing and promoting WRIO Internet OS on all social media outlets, you will earn WGD.",
         "image": "https://webrunes.com/img/cards/bounty_thread-200x200.jpg",
         "url": "https://goo.gl/QKFdt1"
