--- a/src/devserver/core/core.html
+++ b/src/devserver/core/core.html
@@ -18,7 +18,7 @@
     <link href="http://localhost:3033/Default-WRIO-Theme/css/wrioos.css" rel="stylesheet">
     <link href="http://localhost:3033/Default-WRIO-Theme/css/core.css" rel="stylesheet">
     
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
     <!-- <script>
