Youtube link upd to a new channel

--- a/hub/cover/index.html
+++ b/hub/cover/index.html
@@ -31,7 +31,7 @@
         "@type": "Article",
         "name": "",
         "about": "WRIO Internet OS is a platfrom for developing a machine-readable web featuring automatic data processing. Automatic data processing will enable tuning up browsing experience based on the needs and interests of each separate user. This will pave the way for a user-centric Web 3.0 with its predictive services and search engines of new generation.",
-        "url": "https://youtu.be/q7WevBb8JeQ?'Intro':5,0,external"
+        "url": "https://youtu.be/rBg5s8rKZQk?'Intro':5,0,external"
         },
         {
         "@type": "Article",
