Title upd to "Core — semantic editor"

--- a/src/devserver/core/core.html
+++ b/src/devserver/core/core.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Core editor">
     <meta name="author" content="webRunes">
-    <title>Core iframe</title>
+    <title>Core — semantic editor</title>
 
     <link href="https://default.wrioos.com/css/bootstrap.min.css" rel="stylesheet">
     <link href="http://localhost:3033/Default-WRIO-Theme/css/material-kit.min.css" rel="stylesheet">
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="//default.wrioos.com/css/ripples.min.css">
     <link href="http://localhost:3033/Default-WRIO-Theme/css/wrioos.css" rel="stylesheet">
     <link href="http://localhost:3033/Default-WRIO-Theme/css/core.css" rel="stylesheet">
-    
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
