--- a/hub/index.html
+++ b/hub/index.html
@@ -41,7 +41,7 @@
         "inLanguage": "En",
         "keywords": "WRIO Internet OS, semantic, web 3.0, secure, decentralization",
         "name": "About",
-        "about": "WRIO Internet OS is a blockchain-powered machine-readable Web 3.0 platform with a focus on automatic data processing and user-centric secure browsing experience.",
+        "about": "WRIO Internet OS is a PaaS and its cloud applications are SaaS (operating on remote servers). Such services do not need to be installed, configured or updated by the user; resource-hungry operations are performed on the server side, while the client receives the final results. Thus, the applications act as conventional desktop programs with the intention to replace desktop OSs in the near future.",
         "articleBody": [
         "“I have a dream for the Web in which computers become capable of analyzing all the data on the Web – the content, links, and transactions between people and computers.” A “Semantic Web”, which makes this possible, has yet to emerge, but when it does, the day-to-day mechanisms of trade, bureaucracy and our daily lives will be handled by machines talking to machines. The “intelligent agents” people have touted for ages will finally materialize.” — Tim Berners-Lee, the inventor of the World Wide Web.",
         "  ‎⁪⁭‏​‎⁪⁭‎⁪⁭​‎⁪‪​‎⁪‪​‎⁪‪​​​‎​‎​‎⁪​‎⁪​‎⁪⁭‏",
